--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "hook"
 version = "0.1.0"
 edition = "2021"
+authors = ["Savio Resende <savio@savioresende.com>"]
+description = "A filtering mechanism where functions (filters) can be registered, prioritized, and applied sequentially to values associated with named hooks. In Rust."
+license = "MIT"
+repository = "https://github.com/lotharthesavior/the-hook"
 
 [dependencies]
 once_cell = "1.20.3"
